@@ -30,6 +30,7 @@ Engine fixes:
 * Fix power.target_neighbor not using the starting_pos as the origin point.
 * Fixed crash in Power tooltips when base_damage was not defined.
 * Fix incorrect power level being shown in the action bar tooltips for upgraded powers.
+* Fixed infinite INCLUDE recursion in FileParser.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
